[doc] Add Fetch to Robots

--- a/doc/_data/robots.yml
+++ b/doc/_data/robots.yml
@@ -104,3 +104,12 @@
     module:
       url: https://github.com/rohanpsingh/mc_aliengo
       name: mc_aliengo
+- name: Fetch
+  icon: fetch_image.jpg
+  pkg:
+    desc:
+      url: https://github.com/isri-aist/mc_fetch_description
+      name: mc_fetch_description
+    module:
+      url: https://github.com/isri-aist/mc_fetch
+      name: mc_fetch
