--- a/doc/_data/robots.yml
+++ b/doc/_data/robots.yml
@@ -105,7 +105,7 @@
       url: https://github.com/rohanpsingh/mc_aliengo
       name: mc_aliengo
 - name: Fetch
-  icon: fetch_image.jpg
+  icon: fetch_image.png
   pkg:
     desc:
       url: https://github.com/isri-aist/mc_fetch_description
