[tests] Add some tests about the context backend

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -83,9 +83,10 @@ get_filename_component(EXAMPLE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../doc/_example
 mc_rtc_test(testSchemaExamples mc_tasks)
 mc_rtc_test(testLogger mc_rbdyn)
 mc_rtc_test(testRobotModule mc_rbdyn)
-mc_rtc_test(testCanonicalRobot mc_rbdyn)
 find_description_package(jvrc_description)
 set_target_properties(testRobotModule PROPERTIES COMPILE_FLAGS "-DJVRC_DESCRIPTION_PATH=\"${JVRC_DESCRIPTION_PATH}\"")
+mc_rtc_test(testCanonicalRobot mc_rbdyn)
+mc_rtc_test(testSolverBackend mc_tasks)
 
 ###########################
 # -- FSM related tests -- #
