--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,39 @@ if(NOT MC_RTC_DISABLE_NETWORK)
   find_package(mc_rtc_3rd_party_nanomsg REQUIRED)
 endif()
 
+if(DEFINED ENV{WSL_DISTRO_NAME})
+  set(HOST_IS_WSL ON)
+else()
+  set(HOST_IS_WSL OFF)
+endif()
+
+if(HOST_IS_WSL)
+  set(WSL_NOTIFY_SEND_VERSION "v0.1.871612270")
+  set(WSL_NOTIFY_SEND_SHA256 8531436fd005844aca9948d68b9e4e40df56645a9eade91f47027cdd4d0a1b0e)
+  file(
+    DOWNLOAD
+      https://github.com/stuartleeks/wsl-notify-send/releases/download/${WSL_NOTIFY_SEND_VERSION}/wsl-notify-send_windows_amd64.zip
+      ${PROJECT_BINARY_DIR}/3rd-party/wsl-notify-send.zip
+    EXPECTED_HASH SHA256=${WSL_NOTIFY_SEND_SHA256}
+  )
+  set(WSL_NOTIFY_SEND_DIR "${PROJECT_BINARY_DIR}/3rd-party/wsl-notify-send/")
+  file(MAKE_DIRECTORY ${WSL_NOTIFY_SEND_DIR})
+  execute_process(
+    COMMAND ${CMAKE_COMMAND} -E tar xf ${PROJECT_BINARY_DIR}/3rd-party/wsl-notify-send.zip
+    WORKING_DIRECTORY "${WSL_NOTIFY_SEND_DIR}"
+    COMMAND_ERROR_IS_FATAL ANY
+  )
+  set(WSL_NOTIFY_SEND_LOCATION "${WSL_NOTIFY_SEND_DIR}/wsl-notify-send.exe")
+  message("-- Use wsl-notify-send for notifications at ${WSL_NOTIFY_SEND_LOCATION}")
+endif()
+
+if(NOT HOST_IS_WSL AND NOT WIN32)
+  find_package(mc_rtc_3rd_party_libnotify REQUIRED)
+  message("-- Use libnotify for notifications")
+elseif(NOT HOST_IS_WSL AND WIN32)
+  message("-- Use WinToast for notifications")
+endif()
+
 # qhull (build re-entrant static version)
 add_subdirectory(3rd-party/qhull)
 
