--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -133,8 +133,8 @@ set_target_properties(mc_rtc_utils PROPERTIES COMPILE_FLAGS "-DMC_RTC_UTILS_EXPO
 target_include_directories(mc_rtc_utils PRIVATE "${PROJECT_BINARY_DIR}/include/mc_rtc")
 target_compile_definitions(mc_rtc_utils PUBLIC ${BOOST_USE_STACKTRACE_DEFINE})
 target_link_libraries(mc_rtc_utils PUBLIC SpaceVecAlg::SpaceVecAlg Boost::${BOOST_STACKTRACE} Boost::filesystem Boost::disable_autolinking yaml-cpp spdlog::spdlog ${CMAKE_DL_LIBS} PRIVATE $<BUILD_INTERFACE:mc_rtc_3rd_party::RapidJSON>)
-if(TARGET mc_rtc_3rd_party::libnotify)
-  target_link_libraries(mc_rtc_utils PUBLIC mc_rtc_3rd_party::libnotify)
+if(TARGET PkgConfig::mc_rtc_3rd_party_libnotify)
+  target_link_libraries(mc_rtc_utils PUBLIC PkgConfig::mc_rtc_3rd_party_libnotify)
   target_compile_definitions(mc_rtc_utils PRIVATE MC_RTC_HAS_LIBNOTIFY)
 elseif(HOST_IS_WSL)
   target_compile_definitions(mc_rtc_utils PRIVATE MC_RTC_HAS_WSL_NOTIFY_SEND)
