--- a/debian/control
+++ b/debian/control
@@ -41,6 +41,7 @@ Build-Depends: debhelper (>= 9),
                libndcurves-dev,
                libyaml-cpp-dev,
                libspdlog-dev,
+               libnotify-dev,
 # ros-@ROS_DISTRO@-ros-base,
 # ros-@ROS_DISTRO@-roscpp,
 # ros-@ROS_DISTRO@-sensor-msgs,
