--- a/doc/_examples/yaml/State/Parallel.yaml
+++ b/doc/_examples/yaml/State/Parallel.yaml
@@ -2,7 +2,7 @@ base: Parallel
 # This state runs StateA, StateB and StateC until they are all completed
 # Its output is StateC's output
 states: [StateA, StateB, StateC]
-delay:
+delays:
   # StateB starts 4.5 seconds after the state is started
   StateB: 4.5
 configs:
