--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,9 @@ jobs:
         build-type: [Debug, RelWithDebInfo, script]
         compiler: [gcc, clang]
         exclude:
-          # Only default compiler on macos-latest and windows-latest
+          # Only default compiler on ubuntu-18.04, macos-latest and windows-latest
+          - os: ubuntu-18.04
+            compiler: clang
           - os: macos-latest
             compiler: clang
           - os: windows-latest
