[debian] Add replaces field for libmc-rtc1
This should fix #331

--- a/debian/control
+++ b/debian/control
@@ -87,6 +87,7 @@ Description: mc-rtc - Development files
 Package: libmc-rtc
 Section: libs
 Architecture: any
+Replaces: libmc-rtc1
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          mc-rtc-data
