[bindings] Improve incremental builds
This changes the way we generate the Cython bindings for mc_rtc. Instead
of relying on setup.py, we handle the compilation of the module
ourselves. This ensure that the module properly gets rebuild when the
API/ABI changes.

--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -2,19 +2,12 @@
 # Copyright 2015-2019 CNRS-UM LIRMM, CNRS-AIST JRL
 #
 
-get_cython_libraries(mc_rtc cython_libs)
-get_python_names(python_names)
-
-list(LENGTH python_names NSTATES)
-math(EXPR NSTATES "${NSTATES} - 1")
-foreach(i RANGE ${NSTATES})
-  list(GET python_names ${i} PYTHON_NAME)
-  list(GET cython_libs ${i} CYTHON_LIB)
+foreach(PYTHON_NAME ${PYTHON_BINDING_VERSIONS})
   string(TOLOWER ${PYTHON_NAME} PYTHON_NAME_LOWER)
   set(SRC "${CMAKE_CURRENT_BINARY_DIR}/generated/${PYTHON_NAME_LOWER}_controller.cpp")
   configure_file(python_controller.cpp "${SRC}")
   add_controller(${PYTHON_NAME_LOWER}_controller "${SRC}" "python_controller.h")
   set_target_properties(${PYTHON_NAME_LOWER}_controller PROPERTIES OUTPUT_NAME ${PYTHON_NAME_LOWER})
-  target_link_libraries(${PYTHON_NAME_LOWER}_controller PRIVATE ${CYTHON_LIB})
+  target_link_libraries(${PYTHON_NAME_LOWER}_controller PRIVATE mc_control_fsm_${PYTHON_NAME})
   target_include_directories(${PYTHON_NAME_LOWER}_controller PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 endforeach()
