--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -8,6 +8,6 @@ foreach(PYTHON_NAME ${PYTHON_BINDING_VERSIONS})
   configure_file(python_controller.cpp "${SRC}")
   add_controller(${PYTHON_NAME_LOWER}_controller "${SRC}" "python_controller.h")
   set_target_properties(${PYTHON_NAME_LOWER}_controller PROPERTIES OUTPUT_NAME ${PYTHON_NAME_LOWER})
-  target_link_libraries(${PYTHON_NAME_LOWER}_controller PRIVATE mc_control_fsm_${PYTHON_NAME})
+  target_link_libraries(${PYTHON_NAME_LOWER}_controller PRIVATE mc_control_${PYTHON_NAME} mc_rbdyn_${PYTHON_NAME})
   target_include_directories(${PYTHON_NAME_LOWER}_controller PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 endforeach()
