--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -25,6 +25,7 @@ jobs:
     with:
       deps: '["jrl-umi3218/mc_rtc_ros", "jrl-umi3218/mc_openrtm", "jrl-umi3218/mc_udp", "jrl-umi3218/mc_panda", "jrl-umi3218/mc_state_observation"]'
       with-ros: true
+      latest-cmake: true
     secrets:
       CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
       GH_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
