Make sure to create the cpp output folder
Cython does not do it for us and this results in failed builds.

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -134,7 +134,9 @@ function(make_cython_bindings PACKAGE)
       string(REGEX REPLACE "\\." "_" LIB_NAME ${LIB_NAME})
       string(REGEX REPLACE "^.*\\.(.*)$" "\\1" LIB_OUTPUT_NAME ${MOD})
       set(MOD_OUTPUT_DIRECTORY ${PACKAGE_OUTPUT_DIRECTORY}/${SRC_DIR})
+      set(CPP_OUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/${PYTHON}/${SRC_DIR})
       set(CPP_OUT ${CMAKE_CURRENT_BINARY_DIR}/${PYTHON}/${SRC_CPP})
+      file(MAKE_DIRECTORY ${CPP_OUT_DIR})
       add_custom_command(OUTPUT ${CPP_OUT}
         COMMAND ${${PYTHON}_EXECUTABLE} -m cython --cplus -o ${CPP_OUT} "-I$<JOIN:$<REMOVE_DUPLICATES:$<TARGET_PROPERTY:_cython_dummy_${PACKAGE},INCLUDE_DIRECTORIES>>,;-I>" -I${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/${SRC}
         DEPENDS ${CYTHON_BINDINGS_SOURCES} ${CYTHON_BINDINGS_TARGETS}
