[tests] Set the correct PYTHONPATH to test PythonController

--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -497,7 +497,7 @@ if(PYTHON_BINDING AND NOT APPLE)
       file(GENERATE OUTPUT "${CONFIG_OUT}" INPUT "${CONFIG_IN}")
     endif()
     string(TOLOWER "${PYTHON}" PYTHON_LOWER)
-    set(PYTHONPATH "${PROJECT_BINARY_DIR}/binding/python/mc_rtc/${PYTHON_LOWER}/$<CONFIGURATION>${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}")
+    set(PYTHONPATH "${PROJECT_BINARY_DIR}/binding/python/${PYTHON}/$<CONFIG>/mc_rtc${PATH_SEP}${CMAKE_CURRENT_SOURCE_DIR}")
     if(WIN32)
       set(LDPATH_VAR "PATH")
     else()
