Use default python first when python2/python3 is not explicitly set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,10 @@ if(PYTHON_BINDING)
   list(LENGTH PYTHON_BINDING_VERSIONS N_PYTHON_BINDING_VERSIONS)
   if(N_PYTHON_BINDING_VERSIONS EQUAL 0)
     list(APPEND PYTHON_BINDING_VERSIONS Python)
+    find_program(DEFAULT_PYTHON_EXECUTABLE python)
+    if(DEFAULT_PYTHON_EXECUTABLE)
+      set(Python_EXECUTABLE ${DEFAULT_PYTHON_EXECUTABLE})
+    endif()
   endif()
   foreach(PYTHON_VERSION ${PYTHON_BINDING_VERSIONS})
     find_package(${PYTHON_VERSION} REQUIRED COMPONENTS Interpreter Development NumPy)
