[bindings] Use dedicated helpers to create Python libraries

--- a/binding/python/CMakeLists.txt
+++ b/binding/python/CMakeLists.txt
@@ -143,7 +143,15 @@ function(make_cython_bindings PACKAGE)
         COMMAND_EXPAND_LISTS
       )
       set(TARGET_NAME ${LIB_NAME}_${PYTHON})
-      add_library(${TARGET_NAME} SHARED ${CPP_OUT})
+      if(${PYTHON} STREQUAL "Python")
+        Python_add_library(${TARGET_NAME} SHARED ${CPP_OUT})
+      elseif(${PYTHON} STREQUAL "Python2")
+        Python2_add_library(${TARGET_NAME} SHARED ${CPP_OUT})
+      elseif(${PYTHON} STREQUAL "Python3")
+        Python3_add_library(${TARGET_NAME} SHARED ${CPP_OUT})
+      else()
+        message(FATAL_ERROR "Unknown Python value: ${PYTHON}")
+      endif()
       target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
       target_include_directories(${TARGET_NAME} INTERFACE ${CMAKE_CURRENT_BINARY_DIR}/${PYTHON})
       target_link_libraries(${TARGET_NAME} PUBLIC ${CYTHON_BINDINGS_TARGETS} ${PYTHON}::Python ${PYTHON}::NumPy)
