--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -327,11 +327,14 @@ set(mc_rtc_gui_HDR
   ../include/mc_rtc/gui/ArrayInput.h
   ../include/mc_rtc/gui/ArrayLabel.h
   ../include/mc_rtc/gui/Arrow.h
+  ../include/mc_rtc/gui/Box.h
   ../include/mc_rtc/gui/Button.h
   ../include/mc_rtc/gui/Checkbox.h
   ../include/mc_rtc/gui/ComboInput.h
+  ../include/mc_rtc/gui/Cylinder.h
   ../include/mc_rtc/gui/DataComboInput.h
   ../include/mc_rtc/gui/elements.h
+  ../include/mc_rtc/gui/Ellipsoid.h
   ../include/mc_rtc/gui/Force.h
   ../include/mc_rtc/gui/Form.h
   ../include/mc_rtc/gui/IntegerInput.h
@@ -343,6 +346,7 @@ set(mc_rtc_gui_HDR
   ../include/mc_rtc/gui/Polygon.h
   ../include/mc_rtc/gui/Rotation.h
   ../include/mc_rtc/gui/Schema.h
+  ../include/mc_rtc/gui/Sphere.h
   ../include/mc_rtc/gui/StringInput.h
   ../include/mc_rtc/gui/Trajectory.h
   ../include/mc_rtc/gui/Transform.h
