[cmake] Make the debug loader suffix settable
1. At mc_rtc level through the MC_RTC_LOADER_DEBUG_SUFFIX build option
2. At mc_rtc project level through the same variable (before
   `find_packge(mc_rtc)`

Also set the default suffix to be empty outside of the Windows platform

Closes #93

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,12 @@ if(NOT DEFINED MC_RTC_INSTALL_PREFIX)
   set(MC_RTC_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}")
 endif()
 
+if(WIN32)
+  set(MC_RTC_LOADER_DEBUG_SUFFIX "/debug")
+else()
+  set(MC_RTC_LOADER_DEBUG_SUFFIX "")
+endif()
+
 option(GENERATE_COVERAGE "Generate coverage data" FALSE)
 if("${CMAKE_CXX_FLAGS}" MATCHES "--coverage")
   set(GENERATE_COVERAGE TRUE CACHE BOOL "Generate coverage data" FORCE)
