--- a/src/mc_control/fsm/states/CMakeLists.txt
+++ b/src/mc_control/fsm/states/CMakeLists.txt
@@ -17,9 +17,9 @@ macro(add_fsm_state state_name state_SRC state_HDR)
     set_target_properties(${state_name} PROPERTIES COMPILE_FLAGS "-DMC_CONTROL_FSM_STATE_EXPORTS")
     target_link_libraries(${state_name} PUBLIC mc_control_fsm)
     install(TARGETS ${state_name} EXPORT mc_rtc_fsm_states
-      ARCHIVE DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      LIBRARY DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      RUNTIME DESTINATION "${MC_FSM_STATES_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
+      ARCHIVE DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      LIBRARY DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      RUNTIME DESTINATION "${MC_FSM_STATES_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
     )
   endif()
   install(FILES ${state_HDR} DESTINATION ${FSM_HDR_INSTALL_DIR})
@@ -57,9 +57,9 @@ if(${PYTHON_BINDING})
     set_target_properties(${PYTHON_NAME}State PROPERTIES FOLDER controllers/fsm/states)
     target_link_libraries(${PYTHON_NAME}State PUBLIC mc_control_fsm_${PYTHON_NAME})
     install(TARGETS ${PYTHON_NAME}State
-      ARCHIVE DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      LIBRARY DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      RUNTIME DESTINATION "${MC_FSM_STATES_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
+      ARCHIVE DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      LIBRARY DESTINATION "${MC_FSM_STATES_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      RUNTIME DESTINATION "${MC_FSM_STATES_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
     )
   endforeach()
 endif()
