--- a/src/mc_observers/CMakeLists.txt
+++ b/src/mc_observers/CMakeLists.txt
@@ -11,9 +11,9 @@ macro(add_observer observer_base)
     target_link_libraries(${observer_base} PUBLIC mc_rbdyn mc_rtc_gui mc_control mc_filter)
     target_include_directories(${observer_base} PUBLIC $<INSTALL_INTERFACE:include> $<BUILD_INTERFACE:${MC_RTC_SOURCE_DIR}/include/mc_observers>)
     install(TARGETS ${observer_base} EXPORT mc_rtc_observers
-      ARCHIVE DESTINATION "${MC_OBSERVERS_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      LIBRARY DESTINATION "${MC_OBSERVERS_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
-      RUNTIME DESTINATION "${MC_OBSERVERS_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:/debug>"
+      ARCHIVE DESTINATION "${MC_OBSERVERS_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      LIBRARY DESTINATION "${MC_OBSERVERS_LIBRARY_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
+      RUNTIME DESTINATION "${MC_OBSERVERS_RUNTIME_INSTALL_PREFIX}$<$<CONFIG:debug>:${MC_RTC_LOADER_DEBUG_SUFFIX}>"
     )
   endif()
 endmacro()
