--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,13 +1,13 @@
 #
-# Copyright 2015-2019 CNRS-UM LIRMM, CNRS-AIST JRL, BIT
+# Copyright 2015-2019 CNRS-UM LIRMM, CNRS-AIST JRL
 #
 
-macro(add_plugin plugin plugin_SRC plugin_HDR)
+macro(add_plugin plugin)
   option(AUTOLOAD_${plugin}_PLUGIN "Automatically load ${plugin} plugin" ON)
   if(MC_RTC_BUILD_STATIC)
-    target_sources(mc_control PRIVATE ${plugin_SRC} ${plugin_HDR})
+    target_sources(mc_control PRIVATE ${ARGN})
   else()
-    add_library(${plugin} SHARED ${plugin_SRC} ${plugin_HDR})
+    add_library(${plugin} SHARED ${ARGN})
     set_target_properties(${plugin} PROPERTIES PREFIX "")
     target_link_libraries(${plugin} PUBLIC mc_rtc::mc_control)
     install(TARGETS ${plugin}
