[doc] Add information about mc_rtc_ticker and the Replay function

--- a/doc/_data/links.yml
+++ b/doc/_data/links.yml
@@ -26,3 +26,5 @@ mc_rtc_data:
   url: https://github.com/jrl-umi3218/mc_rtc_data
 Eigen:
   url: https://eigen.tuxfamily.org
+mc_rtc-magnum:
+  url: https://github.com/gergondet/mc_rtc-magnum
